*SVN*

* ActionWebService now always returns UTF-8 responses.

*0.8.1* (11 July, 2005)

* Fix scaffolding for Action Pack controller changes


*0.8.0* (6 July, 2005)

* Fix WSDL generation by aliasing #inherited instead of trying to overwrite it, or the WSDL action may end up not being defined in the controller

* Add ActionController::Base.wsdl_namespace option, to allow overriding of the namespace used in generated WSDL and SOAP messages. This is equivalent to the [WebService(Namespace = "Value")] attribute in .NET.

* Add workaround for Ruby 1.8.3's SOAP4R changing the return value of SOAP::Mapping::Registry#find_mapped_soap_class #1414 [Shugo Maeda]

* Fix moduled controller URLs in WSDL, and add unit test to verify the generated URL #1428

* Fix scaffolding template paths, it was broken on Win32

* Fix that functional testing of :layered controllers failed when using the SOAP protocol

* Allow invocation filters in :direct controllers as well, as they have access to more information regarding the web service request than ActionPack filters

* Add support for a :base64 signature type #1272 [Shugo Maeda]

* Fix that boolean fields were not rendered correctly in scaffolding

* Fix that scaffolding was not working for :delegated dispatching

* Add support for structured types as input parameters to scaffolding, this should let one test the blogging APIs using scaffolding as well

* Fix that generated WSDL was not using relative_url_root for base URI #1210 [Shugo Maeda]

* Use UTF-8 encoding by default for SOAP responses, but if an encoding is supplied by caller, use that for the response  #1211 [Shugo Maeda, NAKAMURA Hiroshi]

* If the WSDL was retrieved over HTTPS, use HTTPS URLs in the WSDL too

* Fix that casting change in 0.7.0 would convert nil values to the default value for the type instead of leaving it as nil


*0.7.1* (20th April, 2005)

* Depend on Active Record 1.10.1 and Action Pack 1.8.1


*0.7.0* (19th April, 2005)
